[gd_scene load_steps=3 format=3 uid="uid://dgpx2nnbybvcd"]

[ext_resource type="Script" uid="uid://6dvj1ck7s24o" path="res://board_3d.gd" id="1_ox6d3"]
[ext_resource type="PackedScene" uid="uid://01yv2bmucth2" path="res://art/board.glb" id="2_4tqup"]

[node name="Board3D" type="Node3D"]
script = ExtResource("1_ox6d3")
square_size = 0.04
board_offset = Vector3(-0.14, 0, -0.14)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
directional_shadow_max_distance = 2.0

[node name="Pieces" type="Node3D" parent="."]

[node name="board" parent="." instance=ExtResource("2_4tqup")]

[node name="GameOverUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -29.0
offset_right = 32.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="GameOverUI/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="GameOverUI/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="GraveyardWhite" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0, 0)

[node name="GraveyardBlack" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0)

[node name="CameraPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]

[connection signal="pressed" from="GameOverUI/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
